Finnish Register Client

--- a/Aeroporto/UI.csproj
+++ b/Aeroporto/UI.csproj
@@ -115,5 +115,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Libary\Library.csproj">
+      <Project>{ff9b67e3-2de6-4426-8a09-a401dc292b62}</Project>
+      <Name>Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
