--- a/Aeroporto/UI.csproj
+++ b/Aeroporto/UI.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Interfaces\IRegisterBagRequest.cs" />
     <Compile Include="Interfaces\IRegisterClientRequest.cs" />
     <Compile Include="Interfaces\IRegisterFlightRequest.cs" />
+    <Compile Include="Interfaces\IUpdateClientRequest.cs" />
+    <Compile Include="Interfaces\IUpdateFlightRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterBag.cs">
@@ -81,6 +83,18 @@
     </Compile>
     <Compile Include="RegisterFlight.Designer.cs">
       <DependentUpon>RegisterFlight.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UpdateClient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateClient.Designer.cs">
+      <DependentUpon>UpdateClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UpdateFlight.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateFlight.Designer.cs">
+      <DependentUpon>UpdateFlight.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="BookFlight.resx">
       <DependentUpon>BookFlight.cs</DependentUpon>
@@ -105,6 +119,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RegisterFlight.resx">
       <DependentUpon>RegisterFlight.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateClient.resx">
+      <DependentUpon>UpdateClient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateFlight.resx">
+      <DependentUpon>UpdateFlight.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
