--- a/Aeroporto/App.config
+++ b/Aeroporto/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name ="aeroporto" connectionString="Server=.;Database=aeroporto;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+		<add name ="Companhia_Aerea" connectionString="Server=.;Database=Companhia_Aerea;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
